--- a/package.json
+++ b/package.json
@@ -17,60 +17,60 @@
   "devDependencies": {
     "autoprefixer": "6.7.2",
     "axios-mock-adapter": "1.9.0",
-    "babel-core": "6.26.0",
-    "babel-eslint": "8.0.1",
-    "babel-jest": "21.2.0",
-    "babel-loader": "7.1.2",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
+    "babel-jest": "22.4.3",
+    "babel-loader": "7.1.4",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-optimize": "1.0.1",
-    "babel-preset-stage-0": "6.24.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
-    "copy-webpack-plugin": "4.1.1",
-    "copyfiles": "1.2.0",
-    "cross-spawn": "4.0.2",
-    "css-loader": "0.26.1",
-    "detect-port": "1.1.0",
-    "dotenv": "2.0.0",
-    "eslint": "4.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-friendly-formatter": "3.0.0",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.4.0",
-    "express": "4.15.2",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "0.10.0",
-    "fs-extra": "0.30.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.3",
+    "babel-preset-stage-2": "6.24.1",
+    "case-sensitive-paths-webpack-plugin": "2.1.2",
+    "chalk": "2.4.1",
+    "connect-history-api-fallback": "1.5.0",
+    "copy-webpack-plugin": "4.5.1",
+    "copyfiles": "2.0.0",
+    "cross-spawn": "6.0.5",
+    "css-loader": "0.28.11",
+    "detect-port": "1.2.2",
+    "dotenv": "5.0.1",
+    "eslint": "4.19.1",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-import": "2.11.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-react": "7.7.0",
+    "express": "4.16.3",
+    "file-loader": "1.1.11",
+    "fs-extra": "6.0.0",
+    "html-webpack-plugin": "3.2.0",
+    "http-proxy-middleware": "0.18.0",
     "husky": "0.14.3",
-    "jest": "21.2.1",
-    "json-loader": "0.5.4",
-    "lint-staged": "4.0.2",
+    "jest": "22.4.3",
+    "json-loader": "0.5.7",
+    "lint-staged": "7.0.5",
     "load-grunt-tasks": "3.5.2",
-    "node-sass": "4.5.3",
-    "nodemon": "1.11.0",
+    "node-sass": "4.9.0",
+    "nodemon": "1.17.3",
     "object-assign": "4.1.1",
     "path": "0.12.7",
-    "postcss-loader": "1.2.2",
-    "promise": "7.1.1",
-    "react-dev-utils": "0.5.2",
-    "redux-mock-store": "1.2.3",
-    "sass-loader": "6.0.5",
-    "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.3",
-    "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.2"
+    "postcss-loader": "2.1.4",
+    "promise": "8.0.1",
+    "react-dev-utils": "5.0.1",
+    "redux-mock-store": "1.5.1",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21.0",
+    "url-loader": "1.0.1",
+    "webpack": "4.6.0",
+    "webpack-cli": "2.1.2",
+    "webpack-dev-server": "3.1.4",
+    "webpack-manifest-plugin": "2.0.2",
+    "whatwg-fetch": "2.0.4"
   },
   "scripts": {
-    "build": "rm -rf dist && mkdir dist && NODE_ENV=production webpack --progress --profile --colors --config=webpack.config.production.js",
-    "dev": "webpack-dev-server --hot --inline --progress --colors --config=webpack.config.development.js & node server.js",
+    "build": "rm -rf dist && mkdir dist && webpack --progress --profile --colors --mode production --config webpack.config.production.js",
+    "dev": "webpack-dev-server --hot --inline --progress --colors --mode development --config webpack.config.development.js & node server.js",
     "test": "jest",
     "precommit": "npm test && lint-staged",
     "lint": "eslint src/js/** --fix"
